# shardbearer

./: .gitignore  Cargo.toml  LICENSE  README.md  client.md  order.md  radiant.md  scherald.md  shard.md
docs/: ARCHITECTURE.md  order.md  order_states.dot  radiant.md  radiant_states.dot  shard.md
examples/: README.md
examples-and-tests/custom-entrypoint/: server.rs  server_default_rt.rs
examples-and-tests/herald/: server.rs
examples-and-tests/radiant/: client.rs  server3.toml
examples/herald/: server.rs
examples/radiant/: client.rs  server.rs  server1.toml  server2.toml  server3.toml
examples/test_clients/: rpc_handler_cli.rs
shardbearer-core/: Cargo.toml
shardbearer-core/src/: bondsmith.rs  consensus.rs  controller.rs  herald.rs  lib.rs  membership.rs  msg.rs  order.rs  radiant.rs  raft.rs  roles.rs  shard.rs  sys.rs  system.rs
shardbearer-proto/: .gitignore  Cargo.toml  build.rs
shardbearer-proto/.cargo/: config
shardbearer-proto/proto/: .gitignore  common.proto  common.rs  mod.rs
shardbearer-proto/proto/bondsmith/: bondsmith.proto  mod.rs
shardbearer-proto/proto/controller/: controller.proto  controller.rs  controller_grpc.rs  mod.rs
shardbearer-proto/proto/herald/: herald.proto  mod.rs
shardbearer-proto/proto/radiant/: mod.rs  radiant.proto
shardbearer-proto/proto/shard/: mod.rs  shard.proto
shardbearer-proto/src/: lib.rs
shardbearer-shardkv/: Cargo.toml
shardbearer-shardkv/src/: lib.rs  shard.rs
shardbearer-state/: Cargo.toml
shardbearer-state/src/: bondsmith.rs  lib.rs  order.rs  radiant.rs  sys.rs
shardbearer-sys/: Cargo.toml
shardbearer-sys/src/: config.rs  lib.rs  msg.rs  rctrl.rs  rpc_cli_handler.rs  rsvc.rs  server.rs
src/: client.rs  config.rs  handler.rs  herald.rs  lib.rs  order.rs  radiant.rs  rctrl.rs  rhndlr.rs  rsvc.rs  sender.rs  server.rs  service.rs  shard.rs
test/: README.md
test/test_clients/: rpc_handler_cli.rs
