[package]
name = "shardbearer"
version = "0.1.0"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "0.9"}
futures = "0.3"
shardbearer-core = { path = "shardbearer-core", version = "0.1.0"}
shardbearer-proto = { path = "shardbearer-proto", version = "0.1.0"}
protobuf = { version = "2.0"}#, optional = true }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.14.0", features = ["full"] }
indexmap = "1.7.0"
#raft = "0.4.3"
toml = "0.5.8"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0.61"


raft = { git = "https://github.com/tikv/raft-rs", branch = "master"}
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master"}
slog = "2.2"
slog-envlogger = { version = "2.1.0"}#, optional = true }
slog-stdlog = { version = "4"}#, optional = true }
slog-term = { version = "2.4.0"} #, optional = true }
slog-async = "2.3.0"
#async-raft = "0.6.1"

#raft = "0.6.0"
rand = "0.8.4"
timer = "0.2.0"
chrono = "0.4.19"

[features]
default=[]
tests = ["client_tests"]
client_tests = []
#herald = []
#client = []

[[example]]
name="herald_server"
path="examples/herald/server.rs"

#[[example]]
#name="testclient"
#path="examples/test_clients/rpc_handler_cli.rs"
#features=["client_tests"]

[[example]]
name="radiant_server"
path="examples/radiant/server.rs"
[[example]]
name="radiant_client"
path="examples/radiant/client.rs"

[workspace]
members = [ "shardbearer-proto", "shardbearer-core", "shardbearer-shardkv","." ]