[package]
name = "shardbearer-core"
version = "0.1.0"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.7.0"
tokio = { version = "1.14.0", features = ["full"] }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0.61"
tracing = "0.1"

bincode = "1.3.3"
thiserror = "1.0"
#protobuf = { version = "2.0"}
#shardbearer-proto = { path = "../shardbearer-proto", version = "0.1.0"}
shardbearer-state = { path = "../shardbearer-state", version = "0.1.0"}