[package]
name = "shardbearer-proto"
version = "0.1.0"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"

[dependencies]
futures = "0.3"
grpcio = { version = "0.9.0"}
protobuf = { version = "2.0"}

[build-dependencies]
protoc-grpcio="2.0.0"
grpcio-compiler="0.6"
protobuf-codegen = "2.25.2" #{ version="2.25.2", path = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen" }
#protoc-rust = { path = "../protoc-rust" }

